Add missing pages: vineyard, contact, about

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: #212121;
   background-color: #fff;
 
