--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,19 @@
     @apply w-14 h-14 p-2 hover:bg-yellow-600 hover:rounded-3xl transition-all duration-300 ease-in;
   }
   .page-section{
-    @apply md:w-4/5 3xl:w-3/5 mx-auto mt-12;
+    @apply md:w-10/12 3xl:w-8/12 mx-auto mt-12;
+  }
+  main {
+    @apply px-4 md:px-0;
+  }
+  section h2 {
+    @apply text-center text-3xl md:text-left xl:text-4xl;
+  }
+  section p {
+    @apply text-justify xl:text-xl !leading-relaxed;
+  }
+  .cropped-svg {
+    @apply w-24 mt-1;
+    clip-path: inset(0 0 30% 0); /* Crop the bottom half */
   }
 }
